Add draggable ships

--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -1,3 +1,7 @@
 #player_grid
   - 100.times do |i|
     .square{ :draggable => "true" }
+
+%ul
+  - 5.times do |i|
+    %li.ship{ :draggable => "true" }
