--- a/app/assets/stylesheets/games.css.sass
+++ b/app/assets/stylesheets/games.css.sass
@@ -4,6 +4,7 @@
 
 #player_grid
   width: 520px
+  float: left
 
 .square
   background-color: gray
@@ -11,3 +12,13 @@
   width: 50px
   margin: 1px
   float: left
+
+.ships
+  float: left
+
+.ship
+  width: 50px
+  height: 50px
+  background-color: red
+  margin: 1px
+  list-style-type: none
