Add the "ships" class to the list of ships

--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -2,6 +2,6 @@
   - 100.times do |i|
     .square{ :draggable => "true" }
 
-%ul
+%ul.ships
   - 5.times do |i|
     %li.ship{ :draggable => "true" }
